2005-09-26  Roland Illig  <roland.illig@gmx.de>

	* extfs/iso9660.in: Ignore error messages from locale(1), as it
	does not exist on OpenBSD. Reported by q# on mc-devel.

2005-09-26  Roland Illig  <roland.illig@gmx.de>

	* utilvfs.h (vfs_parse_filetype, vfs_parse_fileperms,
	vfs_parse_filemode): Rewrote the functions to parse Unix file
	modes.
	* utilvfs.c: Likewise.
	* fish.c: Using the new parsing functions.

2005-09-15  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* samba/lib/util.c (tab_depth): Remove.
	* samba/include/byteorder.h: Remove all macroces with tab_depth().
	* vfs/samba/lib/util_sock.c: Comment out read_smb_length(),
	send_null_session_msg(), send_one_packet(), send_smd()
	and read_smb_length().
	* vfs/samba/libsmb/nmblib.c: Comment out copy_nmb_packet(),
	copy_dgram_packet(), copy_packet() and nmb_name_equal().

2005-09-07  Roland Illig  <roland.illig@gmx.de>

	* samba/*: Added many const qualifiers to properly fix the
	warnings emitted by gcc with -Wwrite-strings.
	* smbfs.c: Likewise.

2005-09-05  Roland Illig  <roland.illig@gmx.de>

	* direntry.c: Added const qualifiers to work around gcc
	warnings.
	* extfs.c: Likewise.
	* fish.c: Likewise.
	* ftpfs.c: Likewise.
	* sfs.c: Likewise.
	* xdirentry.h: Likewise.
	* samba/: Added a const qualifier to setup_logging().
	* smbfs.c: Removed dbghdr_wrapper. Removed all const_cast
	instances.

2005-08-15  Roland Illig  <roland.illig@gmx.de>

	* vfs-impl.h (union vfs_dirent): Using the offsetof macro
	instead of null pointer arithmethics.
	* ftpfs.c: Code cleanup.
	* direntry.c: Removed an unused variable.

2005-07-31  Roland Illig  <roland.illig@gmx.de>

	* samba: Added some const qualifiers to reduce the number of gcc
	warnings.

2005-07-25  Pavel Roskin  <proski@gnu.org>

	* extfs/urar.in: Remove month translation and year windowing -
	they are better handled by mc.  Use more robust date format.
	Set locale to C.

	* extfs/uzip.in: Preserve seconds.  Avoid month translation - it
	only slows down processing.
